// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer shoudl match snapshot when output from 'shouldShowFooterListComponentSelector' is false 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    onLayout={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          [
            {
              "zIndex": 1,
            },
            false,
          ]
        }
      >
        <View
          aria-hidden={false}
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "bottom": 0,
                  "left": 0,
                  "opacity": 1,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="auto"
                style={
                  {
                    "backgroundColor": "#FFFFFF",
                    "borderBottomColor": "rgb(216, 216, 216)",
                    "flex": 1,
                    "shadowColor": "rgba(0, 0, 0, 1)",
                    "shadowOffset": {
                      "height": 0.5,
                      "width": 0,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 0,
                  }
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                [
                  {
                    "alignItems": "stretch",
                    "flex": 1,
                    "flexDirection": "row",
                  },
                  {
                    "marginHorizontal": 5,
                  },
                ]
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "center",
                    "flexBasis": 0,
                    "flexDirection": "row",
                    "flexGrow": 1,
                    "justifyContent": "flex-start",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  role="heading"
                  style={
                    {
                      "color": "rgb(28, 28, 30)",
                      "fontFamily": "System",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  MESSAGES_HOME
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "center",
                    "flexBasis": 0,
                    "flexDirection": "row",
                    "flexGrow": 1,
                    "justifyContent": "flex-end",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          androidResetScreenShadowStateOnOrientationChangeEnabled={true}
          collapsable={false}
          fullScreenSwipeEnabled="undefined"
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          onGestureCancel={[Function]}
          pointerEvents="box-none"
          sheetAllowedDetents={
            [
              1,
            ]
          }
          sheetCornerRadius={-1}
          sheetDefaultResizeAnimationEnabled={true}
          sheetElevation={24}
          sheetExpandsWhenScrolledToEdge={true}
          sheetGrabberVisible={false}
          sheetInitialDetent={0}
          sheetLargestUndimmedDetent={-1}
          sheetShouldOverflowTopInset={false}
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": undefined,
            }
          }
          synchronousShadowStateUpdatesEnabled={false}
        >
          <View
            aria-hidden={false}
            collapsable={false}
            pointerEvents="box-none"
            style={
              [
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                {
                  "display": "flex",
                  "overflow": undefined,
                  "visibility": "visible",
                },
              ]
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "opacity": 1,
                }
              }
            />
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                enabled={false}
                handlerTag={-1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                pointerEvents="box-none"
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "#FFFFFF",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`Footer shoudl match snapshot when output from 'shouldShowFooterListComponentSelector' is true 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    onLayout={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          [
            {
              "zIndex": 1,
            },
            false,
          ]
        }
      >
        <View
          aria-hidden={false}
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "bottom": 0,
                  "left": 0,
                  "opacity": 1,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="auto"
                style={
                  {
                    "backgroundColor": "#FFFFFF",
                    "borderBottomColor": "rgb(216, 216, 216)",
                    "flex": 1,
                    "shadowColor": "rgba(0, 0, 0, 1)",
                    "shadowOffset": {
                      "height": 0.5,
                      "width": 0,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 0,
                  }
                }
              />
            </View>
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                [
                  {
                    "alignItems": "stretch",
                    "flex": 1,
                    "flexDirection": "row",
                  },
                  {
                    "marginHorizontal": 5,
                  },
                ]
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "center",
                    "flexBasis": 0,
                    "flexDirection": "row",
                    "flexGrow": 1,
                    "justifyContent": "flex-start",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  role="heading"
                  style={
                    {
                      "color": "rgb(28, 28, 30)",
                      "fontFamily": "System",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  MESSAGES_HOME
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "center",
                    "flexBasis": 0,
                    "flexDirection": "row",
                    "flexGrow": 1,
                    "justifyContent": "flex-end",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          androidResetScreenShadowStateOnOrientationChangeEnabled={true}
          collapsable={false}
          fullScreenSwipeEnabled="undefined"
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          onGestureCancel={[Function]}
          pointerEvents="box-none"
          sheetAllowedDetents={
            [
              1,
            ]
          }
          sheetCornerRadius={-1}
          sheetDefaultResizeAnimationEnabled={true}
          sheetElevation={24}
          sheetExpandsWhenScrolledToEdge={true}
          sheetGrabberVisible={false}
          sheetInitialDetent={0}
          sheetLargestUndimmedDetent={-1}
          sheetShouldOverflowTopInset={false}
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": undefined,
            }
          }
          synchronousShadowStateUpdatesEnabled={false}
        >
          <View
            aria-hidden={false}
            collapsable={false}
            pointerEvents="box-none"
            style={
              [
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                {
                  "display": "flex",
                  "overflow": undefined,
                  "visibility": "visible",
                },
              ]
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "opacity": 1,
                }
              }
            />
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                enabled={false}
                handlerTag={-1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                pointerEvents="box-none"
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "#FFFFFF",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        accessibilityLabel="Caricamento dei messaggi..."
                        style={
                          {
                            "flexDirection": "row",
                            "height": 95.5,
                            "padding": 16,
                          }
                        }
                      >
                        <View
                          style={
                            {
                              "justifyContent": "center",
                            }
                          }
                        >
                          <View
                            collapsable={false}
                            jestAnimatedProps={
                              {
                                "value": {},
                              }
                            }
                            jestAnimatedStyle={
                              {
                                "value": {},
                              }
                            }
                            jestInlineStyle={
                              [
                                {
                                  "backgroundColor": "#E8EBF1",
                                  "borderCurve": "continuous",
                                  "borderRadius": 8,
                                  "height": 44,
                                  "width": 44,
                                },
                                {
                                  "animationDuration": "1250ms",
                                  "animationIterationCount": "infinite",
                                  "animationName": {
                                    "0%, 100%": {
                                      "opacity": 0.75,
                                    },
                                    "50%": {
                                      "opacity": 0.35,
                                    },
                                  },
                                  "animationTimingFunction": CubicBezierEasing {
                                    "x1": 0.37,
                                    "x2": 0.63,
                                    "y1": 0,
                                    "y2": 1,
                                  },
                                },
                              ]
                            }
                            style={
                              [
                                {
                                  "backgroundColor": "#E8EBF1",
                                  "borderCurve": "continuous",
                                  "borderRadius": 8,
                                  "height": 44,
                                  "width": 44,
                                },
                                {},
                              ]
                            }
                          />
                        </View>
                        <View
                          style={
                            {
                              "flex": 1,
                              "marginLeft": 8,
                            }
                          }
                        >
                          <View
                            style={
                              {
                                "flexDirection": "row",
                              }
                            }
                          >
                            <View
                              style={
                                {
                                  "flex": 1,
                                }
                              }
                            >
                              <View
                                collapsable={false}
                                jestAnimatedProps={
                                  {
                                    "value": {},
                                  }
                                }
                                jestAnimatedStyle={
                                  {
                                    "value": {},
                                  }
                                }
                                jestInlineStyle={
                                  [
                                    {
                                      "backgroundColor": "#E8EBF1",
                                      "borderCurve": "continuous",
                                      "borderRadius": 8,
                                      "height": 16,
                                      "width": "100%",
                                    },
                                    {
                                      "animationDuration": "1250ms",
                                      "animationIterationCount": "infinite",
                                      "animationName": {
                                        "0%, 100%": {
                                          "opacity": 0.75,
                                        },
                                        "50%": {
                                          "opacity": 0.35,
                                        },
                                      },
                                      "animationTimingFunction": CubicBezierEasing {
                                        "x1": 0.37,
                                        "x2": 0.63,
                                        "y1": 0,
                                        "y2": 1,
                                      },
                                    },
                                  ]
                                }
                                style={
                                  [
                                    {
                                      "backgroundColor": "#E8EBF1",
                                      "borderCurve": "continuous",
                                      "borderRadius": 8,
                                      "height": 16,
                                      "width": "100%",
                                    },
                                    {},
                                  ]
                                }
                              />
                            </View>
                            <View
                              style={
                                {
                                  "marginLeft": 12,
                                  "width": 30,
                                }
                              }
                            >
                              <View
                                collapsable={false}
                                jestAnimatedProps={
                                  {
                                    "value": {},
                                  }
                                }
                                jestAnimatedStyle={
                                  {
                                    "value": {},
                                  }
                                }
                                jestInlineStyle={
                                  [
                                    {
                                      "backgroundColor": "#E8EBF1",
                                      "borderCurve": "continuous",
                                      "borderRadius": 8,
                                      "height": 16,
                                      "width": "100%",
                                    },
                                    {
                                      "animationDuration": "1250ms",
                                      "animationIterationCount": "infinite",
                                      "animationName": {
                                        "0%, 100%": {
                                          "opacity": 0.75,
                                        },
                                        "50%": {
                                          "opacity": 0.35,
                                        },
                                      },
                                      "animationTimingFunction": CubicBezierEasing {
                                        "x1": 0.37,
                                        "x2": 0.63,
                                        "y1": 0,
                                        "y2": 1,
                                      },
                                    },
                                  ]
                                }
                                style={
                                  [
                                    {
                                      "backgroundColor": "#E8EBF1",
                                      "borderCurve": "continuous",
                                      "borderRadius": 8,
                                      "height": 16,
                                      "width": "100%",
                                    },
                                    {},
                                  ]
                                }
                              />
                            </View>
                          </View>
                          <View
                            style={
                              {
                                "marginTop": 13,
                              }
                            }
                          >
                            <View
                              collapsable={false}
                              jestAnimatedProps={
                                {
                                  "value": {},
                                }
                              }
                              jestAnimatedStyle={
                                {
                                  "value": {},
                                }
                              }
                              jestInlineStyle={
                                [
                                  {
                                    "backgroundColor": "#E8EBF1",
                                    "borderCurve": "continuous",
                                    "borderRadius": 8,
                                    "height": 8,
                                    "width": "100%",
                                  },
                                  {
                                    "animationDuration": "1250ms",
                                    "animationIterationCount": "infinite",
                                    "animationName": {
                                      "0%, 100%": {
                                        "opacity": 0.75,
                                      },
                                      "50%": {
                                        "opacity": 0.35,
                                      },
                                    },
                                    "animationTimingFunction": CubicBezierEasing {
                                      "x1": 0.37,
                                      "x2": 0.63,
                                      "y1": 0,
                                      "y2": 1,
                                    },
                                  },
                                ]
                              }
                              style={
                                [
                                  {
                                    "backgroundColor": "#E8EBF1",
                                    "borderCurve": "continuous",
                                    "borderRadius": 8,
                                    "height": 8,
                                    "width": "100%",
                                  },
                                  {},
                                ]
                              }
                            />
                          </View>
                          <View
                            style={
                              {
                                "marginBottom": 5,
                                "marginTop": 15,
                              }
                            }
                          >
                            <View
                              collapsable={false}
                              jestAnimatedProps={
                                {
                                  "value": {},
                                }
                              }
                              jestAnimatedStyle={
                                {
                                  "value": {},
                                }
                              }
                              jestInlineStyle={
                                [
                                  {
                                    "backgroundColor": "#E8EBF1",
                                    "borderCurve": "continuous",
                                    "borderRadius": 8,
                                    "height": 8,
                                    "width": "100%",
                                  },
                                  {
                                    "animationDuration": "1250ms",
                                    "animationIterationCount": "infinite",
                                    "animationName": {
                                      "0%, 100%": {
                                        "opacity": 0.75,
                                      },
                                      "50%": {
                                        "opacity": 0.35,
                                      },
                                    },
                                    "animationTimingFunction": CubicBezierEasing {
                                      "x1": 0.37,
                                      "x2": 0.63,
                                      "y1": 0,
                                      "y2": 1,
                                    },
                                  },
                                ]
                              }
                              style={
                                [
                                  {
                                    "backgroundColor": "#E8EBF1",
                                    "borderCurve": "continuous",
                                    "borderRadius": 8,
                                    "height": 8,
                                    "width": "100%",
                                  },
                                  {},
                                ]
                              }
                            />
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;
